--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,5 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: "Nunito", sans-serif;
+}
 
+@layer components {
+  .button {
+    @apply px-4 py-2 border rounded-full cursor-pointer  hover:shadow-lg active:scale-95 active:bg-gray-100 transition transform duration-100 ease-out;
+  }
+}
 
+.banner::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  opacity: 0.7;
+}
