--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,26 @@ body {
   background: rgba(0, 0, 0, 0.3);
   opacity: 0.7;
 }
+
+::-webkit-scrollbar-button {
+  height: 5px;
+}
+::-webkit-scrollbar {
+  width: 5px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: rgb(255, 254, 254);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+::-webkit-scrollbar-thumb:window-inactive {
+  background: rgba(231, 231, 231, 0.918);
+}
